--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ matplotlib==3.5.3
 numpy==1.23.2
 packaging==21.3
 Pillow==9.2.0
+psycopg2==2.9.3
 pyparsing==3.0.9
 python-dateutil==2.8.2
 six==1.16.0
